fixed layout problems on different resolutions

--- a/assets/twitch.css
+++ b/assets/twitch.css
@@ -88,7 +88,6 @@
   flex: 1 0 auto;
   -webkit-box-flex: 1;
   width: 30rem;
-  max-width: 50%;
   padding: 0px 0.5rem;
 }
 .shelf-card__impression-wrapper {
